[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.1"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["wwt_jupyterlab_extension/labextension/static/style.js"]
ensured-targets = ["wwt_jupyterlab_extension/labextension/static/style.js", "wwt_jupyterlab_extension/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["wwt_jupyterlab_extension/labextension/**", ".*"]

[tool.cranko]
main_version_file = "wwt_jupyterlab_extension/_version.py"
